2011-04-28 Johannes Erdmann <johannes.erdmann@cern.ch>

	* set BAT TRandom3 seed to a fixed value
	* tag KLFitter-00-04-08

2011-04-21 Johannes Erdmann <johannes.erdmann@cern.ch>

	* Venkat's new requirements file
	* tag KLFitter-00-04-07

2011-04-20 Johannes Erdmann <johannes.erdmann@cern.ch>, Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* make minimization method in Fitter configurable
	* changes for the example in top_ljets (print-out in first event)
	* tag KLFitter-00-04-06
	
2011-04-20 Johannes Erdmann <johannes.erdmann@cern.ch>

	* some small updates for the new b-tagging options
	* tag KLFitter-00-04-05

2011-04-20 Stefan Guindon <stefan.guindon@cern.ch>

	* updated b-tagging to make sure no tops in loop over partons
	* made b-tagging now enum, selecting which option to use
	* added b-tagging option for working point with changeable efficiency and rejection rates
	* tag KLFitter-00-04-04

2011-04-20 Johannes Erdmann <johannes.erdmann@cern.ch>

	* Makefile updates for MAC
	* Adding cmt directory and preparecmt.sh script
	* tag KLFitter-00-04-03
	
2011-04-05 Johannes Erdmann <johannes.erdmann@cern.ch>, Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* extras/src/InterfaceRoot.cxx: Files in input.txt can also be separated by ',' which is very useful for grid usage
	* Makefile : updates for more convenience
	* tag KLFitter-00-04-02

2011-03-14 Johannes Erdmann <johannes.erdmann@cern.ch> 

	* remove include and src directories 
	* add enums to LikelihoodTopLeptonJets_JetAngles 
	* fix main Makefile 
	* tag KLFitter-00-04-01 
	
2011-03-14 Johannes Erdmann <johannes.erdmann@cern.ch>

	* restructuring the package: making two libraries (library and extras)
	* Makefile clean-up in example/top_ljets
	* tag KLFitter-00-04-00

2011-03-14 Johannes Erdmann <johannes.erdmann@cern.ch>

	* merging back from KLFitter-00-03-42-branch
	* optimize LikelihoodTopLeptonJets (possible by taking out eta and phi parameters for jets)